--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.6
   go_router: ^13.0.0 # or the latest version
+  flutter_markdown: ^0.6.18
   
 
   # The following adds the Cupertino Icons font to your application.
